--- a/src/assets/css/dashboard.scss
+++ b/src/assets/css/dashboard.scss
@@ -384,6 +384,16 @@ div[data-role=controlgroup] a.ui-btn-active {
     background: transparent !important;
 }
 
+.sendAll {
+    display: flex;
+    flex-direction: row;
+    padding: 1rem;
+    width: 100%;
+}
+
+.sendAll .typeTextForm {
+    width: 100%;
+}
 .activeDevices.itemsContainer {
     /* offset for cardBox margin */
     margin: -0.6em;
