chat + online + assets

--- a/src/assets/css/librarybrowser.scss
+++ b/src/assets/css/librarybrowser.scss
@@ -202,7 +202,7 @@
     background-repeat: no-repeat;
     width: 13.2em;
 
-    [dir='rtl'] & {
+    [dir="rtl"] & {
         background-position: right center;
     }
 }
@@ -326,6 +326,15 @@
 
 .mainDrawer-scrollContainer {
     padding-bottom: 10vh;
+    .sendText {
+        margin: auto;
+        width: 90%;
+
+        .listMessages {
+            padding-bottom: 1rem;
+            max-height: 80vh;
+        }
+    }
 }
 
 @media all and (min-width: 40em) {
